--- a/css/component.css
+++ b/css/component.css
@@ -136,11 +136,20 @@
         flex-grow: 5;
     }
 
+.mp-menu-item-compact {
+    flex-direction: column-reverse !important;
+    justify-content: space-around !important;
+}
+
+    .mp-menu-item-compact > span {
+        font-size: 0.6em;
+        align-self:flex-start;
+        white-space: nowrap;
+    }
+
 .mp-menu ul li {
     cursor: pointer;
     overflow: hidden;
-    /*float: left;*/
-    /*width: 100px;*/
 }
 
     .mp-menu ul li::before {
@@ -152,7 +161,7 @@
     }
 
 .mp-level > ul > li:first-child > div {
-    box-shadow: inset 0 -1px rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2);
+    box-shadow: inset 0 -1px rgba(0,0,0,0.2); /*, inset 0 1px rgba(0,0,0,0.2);*/
 }
 
     .mp-menu ul li div:hover,
@@ -174,7 +183,7 @@
     padding: 1em;
     outline: none;
     background: rgba(0,0,0,0.1);
-    box-shadow: inset 0 1px rgba(0,0,0,0.1);
+    box-shadow: inset 0 -1px rgba(0,0,0,0.2);
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 1px;
