--- a/css/demo.css
+++ b/css/demo.css
@@ -1,13 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+
 @font-face {
     font-weight: normal;
     font-style: normal;
     font-family: 'codropsicons';
-    src:url('../fonts/codropsicons/codropsicons.eot');
-    src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/codropsicons/codropsicons.woff') format('woff'),
-        url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
-        url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
+    src: url('../fonts/codropsicons/codropsicons.eot');
+    src: url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'), url('../fonts/codropsicons/codropsicons.woff') format('woff'), url('../fonts/codropsicons/codropsicons.ttf') format('truetype'), url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
 }
 
 /**,
@@ -27,8 +25,8 @@ body {
     color: #fff;
     font-weight: 300;
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    margin:0px;
-    overflow:hidden;
+    margin: 0px;
+    overflow: hidden;
 }
 
 
@@ -51,20 +49,20 @@ body {
 }
 
 
-    .navbar{
-        position: fixed;
-        right:0px;
-        left:0px;
-        z-index:1030;
-        min-height:50px;
-        background: rgba(255,255,255,0.25)
-    }
+.navbar {
+    position: fixed;
+    right: 0px;
+    left: 0px;
+    z-index: 1030;
+    min-height: 50px;
+    background: rgba(255,255,255,0.25)
+}
 
-        .navbar a {
-            text-decoration: none;
-            color: #f7f7f7;
-            outline: none;
-        }
+    .navbar a {
+        text-decoration: none;
+        color: #f7f7f7;
+        outline: none;
+    }
 
 
 .mp-pusher {
@@ -79,7 +77,7 @@ body {
     top: 50px;
     left: 0px;
     bottom: 0px;
-    z-index: 1;
+    z-index: 1000;
 }
 
 #mp-menu-right {
@@ -87,7 +85,17 @@ body {
     top: 50px;
     right: 0px;
     bottom: 0px;
-    z-index: 1;
+    z-index: 1000;
+}
+
+#page-overlay {
+    background: rgba(0,0,0,0.5);
+    position: fixed;
+    left: 0px;
+    top: 50px;
+    right: 0px;
+    bottom: 0px;
+    z-index: 999;
 }
 
 
@@ -114,19 +122,19 @@ body {
     text-align: center;
 }
 
-.codrops-header h1 {
-    margin: 0;
-    font-weight: 300;
-    font-size: 2.625em;
-    line-height: 1.3;
-}
+    .codrops-header h1 {
+        margin: 0;
+        font-weight: 300;
+        font-size: 2.625em;
+        line-height: 1.3;
+    }
 
-.codrops-header span {
-    display: block;
-    padding: 0 0 0.6em 0.1em;
-    font-size: 60%;
-    opacity: 0.7;
-}
+    .codrops-header span {
+        display: block;
+        padding: 0 0 0.6em 0.1em;
+        font-size: 60%;
+        opacity: 0.7;
+    }
 
 /* To Navigation Style */
 .codrops-top {
@@ -138,27 +146,27 @@ body {
     line-height: 2.2;
 }
 
-.codrops-top a {
-    display: inline-block;
-    padding: 0 1em;
-    color: #fff;
-    text-decoration: none;
-    letter-spacing: 0.1em;
-}
+    .codrops-top a {
+        display: inline-block;
+        padding: 0 1em;
+        color: #fff;
+        text-decoration: none;
+        letter-spacing: 0.1em;
+    }
 
-.codrops-top a:hover {
-    background: rgba(255,255,255,0.95);
-    color: #333;
-}
+        .codrops-top a:hover {
+            background: rgba(255,255,255,0.95);
+            color: #333;
+        }
 
-.codrops-top span.right {
-    float: right;
-}
+    .codrops-top span.right {
+        float: right;
+    }
 
-.codrops-top span.right a {
-    display: block;
-    float: left;
-}
+        .codrops-top span.right a {
+            display: block;
+            float: left;
+        }
 
 .codrops-icon:before {
     margin: 0 4px;
@@ -186,26 +194,26 @@ body {
     font-size: 1.1em;
 }
 
-.codrops-demos a {
-    display: block;
-    float: left;
-    clear: both;
-    margin: 0.5em 0.5em 0.5em 1.9em;
-    padding: 1em 1.1em;
-    width: 280px;
-    outline: none;
-    color: #fff;
-    background: #336ca6;
-    text-align: center;
-    text-decoration: none;
-    font-weight: 700;
-}
+    .codrops-demos a {
+        display: block;
+        float: left;
+        clear: both;
+        margin: 0.5em 0.5em 0.5em 1.9em;
+        padding: 1em 1.1em;
+        width: 280px;
+        outline: none;
+        color: #fff;
+        background: #336ca6;
+        text-align: center;
+        text-decoration: none;
+        font-weight: 700;
+    }
 
-.codrops-demos a:hover,
-.codrops-demos a.current-demo,
-.codrops-demos a.current-demo:hover {
-    opacity: 0.6;
-}
+        .codrops-demos a:hover,
+        .codrops-demos a.current-demo,
+        .codrops-demos a.current-demo:hover {
+            opacity: 0.6;
+        }
 
 .content {
     padding: 4em 2em;
@@ -250,5 +258,4 @@ body {
     .codrops-icon span {
         display: none;
     }
-
 }
