--- a/css/component.css
+++ b/css/component.css
@@ -206,7 +206,7 @@
 
     .mp-menu ul li div:hover,
     .mp-level > ul > li:first-child > div:hover {
-        background: rgba(0,0,0,0.2);
+        /*background: rgba(0,0,0,0.2);*/
         box-shadow: inset 0 -1px rgba(0,0,0,0);
     }
 
