--- a/css/demo.css
+++ b/css/demo.css
@@ -66,12 +66,12 @@ body {
     }
 
 
-.mp-pusher {
+/*.mp-pusher {
     position: relative;
     left: 0;
     height: 100%;
     perspective: 1000px;
-}
+}*/
 
 #mp-menu-left {
     position: absolute;
