--- a/libs/aucmenu/aucmenu.css
+++ b/libs/aucmenu/aucmenu.css
@@ -206,8 +206,10 @@
 
     .mp-menu ul li div:hover,
     .mp-level > ul > li:first-child > div:hover {
+        outline: 3px solid rgba(0,0,0,0.2);
+        outline-offset: -3px;
         /*background: rgba(0,0,0,0.2);*/
-        box-shadow: inset 0 -1px rgba(0,0,0,0);
+        /*box-shadow: inset 0 -1px rgba(0,0,0,0);*/
     }
 
 .mp-item-selected {
